# pymatgen-2-paper

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.typ  pyproject.toml  readme.md  refs.bib
.github/workflows/: lint.yml  test.yml
fig_scripts/citation_by_country/: plot_pmg_paper_citation_by_country.py
fig_scripts/citation_over_year/: citations.csv  citations_over_year.py
fig_scripts/contribution_over_time_plot/: _retrieve_commit_info_over_time.py  plot_num_contributors_by_month.py
fig_scripts/openalex-topics-mindmap/: make_pdf.sh  mindmap.typ  openalex-topics-mindmap.py
fig_scripts/per_package_commit_heatmap/: _monthly_commits_per_package.csv  generate_heatmap.py
fig_scripts/pmg-api-usage-dependent-dependency/: _scrap-github-dependent-repos.ipynb  analyze-dependent-repos.ipynb  analyze-pmg-dep-usage.ipynb  pymatgen_dependents_with_stars.csv
fig_scripts/pmg-api-usage-dependent-dependency/api-analyzer/: pyproject.toml
fig_scripts/pmg-api-usage-dependent-dependency/api-analyzer/api_analyzer/: analyzer.py
fig_scripts/pmg-api-usage-dependent-dependency/api-analyzer/tests/: test_basic.py  test_pmg.py  test_pmv.py
fig_scripts/pmg-api-usage-dependent-dependency/api-analyzer/tests/data/: demo.py  syntax_err.py
fig_scripts/pr_contributors_bar_plot/: _pr_contributors.json  plot_stacked_bar_plot.py
fig_scripts/pr_contributors_worldmap/: _get_contributor_countries.ipynb  pr_info.csv  (+2 more)
figs/: style.py
figs/pmg-api-usage-dependent-dependency/api-analyzer/: .gitignore  pyproject.toml
figs/pmg-api-usage-dependent-dependency/api-analyzer/api_analyzer/: __init__.py  analyzer.py
figs/pmg-api-usage-dependent-dependency/api-analyzer/tests/: conftest.py  test_basic.py  test_pmg.py  test_pmv.py
figs/pmg-api-usage-dependent-dependency/api-analyzer/tests/data/: demo.ipynb  demo.py
figs/pmg-api-usage-dependent-dependency/api-analyzer/tests/data/excluded/: demo.py
paper/: main.typ  readme.md  refs.bib  template.typ
scripts/: __init__.py  pmg_contributors_over_time.py
(+84 files in other folders)
