[project]
name = "api-analyzer"
version = "0.1.0"
description = "Analyze API usage in Python and Jupyter notebooks"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["api_analyzer"]

[dependency-groups]
dev = ["pytest>=8.0"]
